Incluindo middleware para validar token nas rotas
